# studies

./: .gitignore  .gitmodules  LICENSE.txt  README.md
first-year/individual-programming-project/assignment-1/: assignment.md
first-year/individual-programming-project/assignment-2/: assignment.md
first-year/introduction-to-programming/assignment-game-of-life/: assignment.md  game.c
first-year/introduction-to-programming/assignment-palindrom-game/: assignment.md  game.c
first-year/introduction-to-programming/assignment-same-game/: assignment.md  game.c
second-year/GPU-programming/assignment-argon/: argon.cu  argon.hpp  assignment.md
second-year/GPU-programming/assignment-mandelbrot/: .clang-format  Mandelbrot.h  assignment.md  mandelbrot.cpp  mandelbrot.cu
second-year/GPU-programming/assignment-matrices/: .clang-format  assignment.md  matrix_multiply.cu
second-year/algorithms-and-data-structures/assignment-1/: tree.cpp  tree.md
second-year/algorithms-and-data-structures/assignment-2/: comittee.cpp  comittee.md
second-year/algorithms-and-data-structures/lab-1/: bazaar.cpp  bazaar.md  matrix.cpp  matrix.md
second-year/algorithms-and-data-structures/lab-2/: sorting.cpp  sorting.md
second-year/algorithms-and-data-structures/lab-3/: matches.cpp  matches.md
second-year/algorithms-and-data-structures/lab-4/: k-inversions.cpp  k-inversions.md
second-year/algorithms-and-data-structures/lab-5/: coloring.cpp  coloring.md
second-year/databases/: assignment.md
second-year/web-applications/: assignment.md
third-year/concurrent-programming/assignment-c-2/solution/: BLQueue.c  CMakeLists.txt  HazardPointer.c  HazardPointer.h  LLQueue.c  LLQueue.h  Makefile  RingsQueue.c  RingsQueue.h  SimpleQueue.h  simpleTester.c
y3/bsk/assignment-pwn/: README.md  (+1 more)
y3/jpp/zadanie_haskell/: CHANGELOG.md  LICENSE  zadanie-haskell.cabal  zadanie.md
y3/jpp/zadanie_haskell/exe/: Graph.hs  Set.hs  TestBasicGraph.hs
(+486 files in other folders)
