cabal-version:      3.0
name:               zadanie-haskell
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             gemlorg
maintainer:         gosha10goshalol@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable zadanie-haskell
    import:           warnings
    main-is:          TestAll.hs
    other-modules:    
                      Graph,
                      Set,
                      TestBasicGraph,
                    --   TestMonad,
                      TestRelation,
                      TestSet

    -- other-extensions:
    build-depends:    base ^>=4.19.0.0,
                      QuickCheck
    hs-source-dirs:   exe
    default-language: Haskell2010
